Dashboard.cydsn/BUILD.log
--------------- Build Started: 01/11/2020 11:44:57 Project: Dashboard, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
The code generation step is up to date.
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from main.c:6:0:
TFT_Library.h:28:15: error: expected identifier before numeric constant
 #define WHITE 0xffff
               ^
LED.h:20:5: note: in expansion of macro 'WHITE'
     WHITE,
     ^
In file included from main.c:7:0:
LED.h: In function 'LED_color':
LED.h:32:9: warning: case label value exceeds maximum value for type
         case WHITE:
         ^
LED.h:37:9: warning: case label value exceeds maximum value for type
         case RED:
         ^
LED.h:42:9: warning: case label value exceeds maximum value for type
         case YELLOW:
         ^
LED.h:47:9: warning: case label value exceeds maximum value for type
         case GREEN:
         ^
LED.h:52:9: warning: case label value exceeds maximum value for type
         case CYAN:
         ^
LED.h:62:9: warning: case label value exceeds maximum value for type
         case MAGENTA:
         ^
LED.h:67:14: error: 'OFF' undeclared (first use in this function)
         case OFF:
              ^
LED.h:67:14: note: each undeclared identifier is reported only once for each function it appears in
LED.h:57:9: warning: case value '31' not in enumerated type 'color_t {aka enum color}' [-Wswitch]
         case BLUE:
         ^
In file included from main.c:6:0:
main.c: In function 'main':
TFT_Library.h:22:16: warning: large integer implicitly truncated to unsigned type [-Woverflow]
 #define YELLOW 0xffe0
                ^
main.c:327:27: note: in expansion of macro 'YELLOW'
                 LED_color(YELLOW);
                           ^
TFT_Library.h:26:17: warning: large integer implicitly truncated to unsigned type [-Woverflow]
 #define MAGENTA 0xF81F
                 ^
main.c:356:27: note: in expansion of macro 'MAGENTA'
                 LED_color(MAGENTA);
                           ^
TFT_Library.h:23:15: warning: large integer implicitly truncated to unsigned type [-Woverflow]
 #define GREEN 0x07e0
               ^
main.c:473:27: note: in expansion of macro 'GREEN'
                 LED_color(GREEN);
                           ^
TFT_Library.h:21:15: warning: large integer implicitly truncated to unsigned type [-Woverflow]
 #define RED   0xf800
               ^
main.c:542:27: note: in expansion of macro 'RED'
                 LED_color(RED);
                           ^
main.c:544:27: error: 'OFF' undeclared (first use in this function)
                 LED_color(OFF);
                           ^
main.c:558:23: warning: unused variable 'bms_f' [-Wunused-variable]
                 char* bms_f;
                       ^
main.c:484:25: warning: unused variable 'ABS_Motor_RPM' [-Wunused-variable]
                 uint8_t ABS_Motor_RPM = getABSMotorRPM();
                         ^
main.c:224:12: warning: unused variable 'direction' [-Wunused-variable]
     int8_t direction=1;
            ^
main.c:223:13: warning: unused variable 'value' [-Wunused-variable]
     uint8_t value=0; // replace the value with 
             ^
main.c: At top level:
main.c:181:15: warning: 'ReadSwSwitch' declared 'static' but never defined [-Wunused-function]
 static uint32 ReadSwSwitch(void);
               ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Build Failed: 01/11/2020 11:44:57 ---------------
